--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ permalink:        pretty
 # Setup
 title:            mleblanc
 tagline:          ''
-description:      'Physics and Wizards.'
+description:      'physics & wizards.'
 url:              http://mattleblanc.github.io/blog/
 baseurl:          http://mattleblanc.github.io/blog/
 
